--- a/index.html
+++ b/index.html
@@ -78,6 +78,52 @@
 
     </section>
 
+
+    <section class="about-us">
+        <div class="about-us-left">
+            <h5>About us -</h5>
+            <h2>Crafting Quality. Building Trust.</h2>
+            <p>With decades of experience, advanced facilities, and a passionate team, we help global brands bring their clothing visions to life. Ethical, sustainable, and reliable — that's our promise</p>
+            <div class="about-us-left-bottom">
+                <div class="crazy">
+
+                 </div>
+                <div class="about-us-left-right">
+                    <ul class="list-points">
+                        <li>Founded in <span class="orange-text">1985</span></li>
+                        <li>First <span class="orange-text">1M</span> Pieces Exported - 1995</li>
+                        <li><span class="orange-text">Eco-Certified</span> Production - <span class="orange-text">2010</span></li>
+                        <li><span class="orange-text">Global</span> Presence - <span class="orange-text">2020+</span></li>
+                    </ul>
+
+                    <div class="miss-viss">
+                        <img src="public/laundry.svg" alt="">
+                        <div>
+                            <h3>Our Mission</h3>
+                            <p>To deliver world-class apparel manufacturing solutions through innovation, ethical practices, and unwavering commitment to quality.</p>
+                        </div>
+                    </div>
+
+                    <div class="miss-viss">
+                        <img src="public/factory.svg" alt="">
+                        <div>
+                            <h3>Our Vission</h3>
+                            <p>To be the world’s most trusted partner for sustainable, high-quality garments, setting new standards in craftsmanship, responsibility, and customer satisfaction.</p>
+                        </div>
+                    </div>
+
+                <button class="discover-button"><span></span><span>Discover More</span>
+                    <span>
+                    <img src="public/arrow_circle_right.svg"></img></span>
+                </button>
+        </div>
+   </div>
+        </div>
+        <div class="about-us-vid">
+            <img class="about-vid" src="">
+        </div>
+    </section>
+
     </main>
     <footer>
 
