--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
     <section class="about-us">
         <div class="about-us-left">
-            <h5>About us -</h5>
+            <h5>About Us —</h5>
             <h2>Crafting Quality. Building Trust.</h2>
             <p>With decades of experience, advanced facilities, and a passionate team, we help global brands bring their clothing visions to life. Ethical, sustainable, and reliable — that's our promise</p>
             <div class="about-us-left-bottom">
@@ -89,7 +89,8 @@
 
                  </div>
                 <div class="about-us-left-right">
-                    <ul class="list-points">
+                    <div>
+                        <ul class="list-points">
                         <li>Founded in <span class="orange-text">1985</span></li>
                         <li>First <span class="orange-text">1M</span> Pieces Exported - 1995</li>
                         <li><span class="orange-text">Eco-Certified</span> Production - <span class="orange-text">2010</span></li>
@@ -111,16 +112,50 @@
                             <p>To be the world’s most trusted partner for sustainable, high-quality garments, setting new standards in craftsmanship, responsibility, and customer satisfaction.</p>
                         </div>
                     </div>
+                    </div>
 
-                <button class="discover-button"><span></span><span>Discover More</span>
+                <div>
+                    <button class="discover-button"><span></span><span>Discover More</span>
                     <span>
                     <img src="public/arrow_circle_right.svg"></img></span>
                 </button>
+                </div>
         </div>
    </div>
         </div>
         <div class="about-us-vid">
             <img class="about-vid" src="">
+            <img class="video-play" src="/public/video_player.svg" alt="">
+        </div>
+    </section>
+
+    <section class="services">
+       <div>
+            <h5>Services—</h5>
+            <h2>What We Do Best</h2>
+       </div>
+
+       <div class="service-cards-container">
+            <div class="service-card">
+                    <img class="service-card-img" src="" alt="">
+                    <h3>Cutting</h3>
+                    <p>Precision That Shapes Perfection</p>
+                    <button class="service-card-button"><span>Read More</span>
+                    <span>
+                    <img src="public/arrow_circle_right.svg"></img></span>
+                    </button>
+            </div>
+
+         
+       </div>
+
+       <div>
+            
+            <button class="request-quote-button">
+                <span>Request a quote</span>
+                <span>
+                <img src="public/arrow_circle_right.svg"></img></span>
+            </button>
         </div>
     </section>
 
