--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
        </div>
 
        <div class="service-cards-container">
-            <div class="service-card">
+            <!-- <div class="service-card">
                     <img class="service-card-img" src="" alt="">
                     <h3>Cutting</h3>
                     <p>Precision That Shapes Perfection</p>
@@ -144,9 +144,9 @@
                     <span>
                     <img src="public/arrow_circle_right.svg"></img></span>
                     </button>
-            </div>
+            </div> -->
 
-         
+            <!-- Add in JS -->
        </div>
 
        <div>
@@ -156,6 +156,37 @@
                 <span>
                 <img src="public/arrow_circle_right.svg"></img></span>
             </button>
+        </div>
+    </section>
+
+    <section class="why-trust">
+        <div class="trusted-img">aa</div>
+        <div class="trust-points">
+            <h2>Why Brands Trust Us—</h2>
+           <div class="trust-boxes-container">
+             <div class="trust-boxes">
+                <img src="public/acute.svg"></img>
+                <h3>Fast Lead Times</h3>
+                <p>Meeting your deadlines everytime.</p>
+            </div>
+            <div class="trust-boxes big-trust">
+                <img src="public/energy_program_saving.svg"></img>
+                <h3>Eco-Certified Factories</h3>
+                <p>Committed to a greener planet.</p>
+            </div>
+            <div class="trust-boxes">
+                <img src="public/category.svg"></img>
+                <h3>Custom Design Support</h3>
+                <p>Collaborative design expertise for your brand.</p>
+            </div>
+           </div>
+            <div>
+                <button class="request-quote-button quote-second">
+                    <span>Request a quote</span>
+                    <span>
+                    <img src="public/arrow_circle_right.svg"></img></span>
+                </button>
+            </div>
         </div>
     </section>
 
