--- a/index.html
+++ b/index.html
@@ -190,6 +190,96 @@
         </div>
     </section>
 
+    <section class="capabilities">
+       <div>
+            <h5>Capabilities—</h5>
+            <h2>Our Production</h2>
+       </div>
+
+       <div class="page-center">
+        <div class="production-values-container">
+            <div class="production-value">
+               <div>
+                 <h2>3M+</h2>
+                <p>Pieces Monthly</p>
+               </div>
+            </div>
+
+            <div class="production-value">
+               <div>
+                 <h2>5K+</h2>
+                <p>Sewing Machine</p>
+               </div>
+            </div>
+
+            <div class="production-value">
+               <div>
+                 <h2>100+</h2>
+                <p>Washing Machine</p>
+               </div>
+            </div>
+
+            <div class="production-value">
+               <div>
+                 <h2>16K+</h2>
+                <p>Global Employee</p>
+               </div>
+            </div> 
+       </div>
+       </div>
+
+    </section>
+
+    <section class="capabilities">
+       <div>
+            <h5>Products—</h5>
+            <h2>Our Product Excellence</h2>
+       </div>
+
+       <div class="page-center">
+        <div class="production-values-container">
+            <div class="production-value">
+               <div>
+                 <h2>3M+</h2>
+                <p>Pieces Monthly</p>
+               </div>
+            </div>
+
+            <div class="production-value">
+               <div>
+                 <h2>5K+</h2>
+                <p>Sewing Machine</p>
+               </div>
+            </div>
+
+            <div class="production-value">
+               <div>
+                 <h2>100+</h2>
+                <p>Washing Machine</p>
+               </div>
+            </div>
+
+            <div class="production-value">
+               <div>
+                 <h2>16K+</h2>
+                <p>Global Employee</p>
+               </div>
+            </div> 
+       </div>
+       </div>
+
+        <div>
+            
+            <button class="request-quote-button wider-button">
+                <span>Request a quote</span>
+                <span>
+                <img src="public/arrow_circle_right.svg"></img></span>
+            </button>
+        </div>
+
+
+    </section>
+
     </main>
     <footer>
 
