--- a/index.html
+++ b/index.html
@@ -294,9 +294,80 @@
 
     </section>
 
+    <section class="client-section">
+        <div>
+            <h5>We served 22+ clients—</h5>
+            <h2>Our Clients</h2>
+       </div>
+       <img src="/public/clients.svg" alt="">
+       <div class="slider-circle">
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+       </div>
+    </section>
+
+    <section class="certificate-section">
+        <div>
+            <h5>Certificates we have—</h5>
+            <h2>Certifications</h2>
+       </div>
+       <img src="/public/certificates.svg" alt="">
+       <img src="/public/certificates2.svg" alt="">
+        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+       </div>
+    </section>
+
+    <section class="gallery-section">
+        <div>
+
+        </div>
+        <div>
+            
+        </div>
+
+    </section>
+
+    <section>
+        <h2>Testimonials</h2>
+        <div>
+            <div>
+                <img src="" alt="">
+                <p>Quite an insightful training; tons of real time examples to co-relate with what we are learning and helps with real time projects. The training has opened doors to countless opportunities.</p>
+                <div>
+                    <span>Murali S..</span>
+                    <img src="" alt="levis">
+                </div>
+            </div>
+            <div></div>
+            <div></div>
+        </div>
+        <div>
+            <img src="" alt="arrow-left">
+            <img src="" alt="arrow-right">
+        </div>
+    </section>
+
     </main>
     <footer>
-
+        <div>
+            <img src="" alt="logo">
+            <div>
+                <li></li>
+                <li></li>
+                <li></li>
+            </div>
+            <p>&copy; 2023 Fabric Group.</p>
+        </div>
+        <div>
+            <div>
+                <img src="public/fb.svg" alt=""><img src="public/ig.svg" alt=""><img src="public/x.svg" alt=""><img src="public/li.svg" alt="">
+            </div>
+            <p>With a legacy built on precision, innovation, and ethical craftsmanship, [Your Company Name] is a leading garments manufacturer trusted by global brands across continents. From design to delivery, our vertically integrated operations ensure quality, speed, and sustainability at every stage. With decades of experience, state-of-the-art facilities, and a people-first approach, we don’t just make garments — we build lasting partnerships</p>
+            <div>
+                <p>powered by</p>
+                <img src="" alt="fabricXai">
+            </div>
+        </div>
+        <img src="" alt="">
     </footer>
     <script defer src="script.js"></script>
 </body>
