--- a/index.html
+++ b/index.html
@@ -301,7 +301,16 @@
        </div>
        <img src="/public/clients.svg" alt="">
        <div class="slider-circle">
-        <span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span><span></span>
+        <button class="slider-circle-current"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
        </div>
     </section>
 
@@ -317,13 +326,18 @@
     </section>
 
     <section class="gallery-section">
-        <div>
-
+        <div class="gallery-bg"></div>
+        <div class="gallery-text">
+            <div>
+                <h2>Gallery</h2>
+            <p>Take a closer look at our modern production facilities, skilled artisans at work, and the vibrant environment where your garments come to life.</p>
+            </div>
         </div>
-        <div>
-            
+        <div class="gallery-images">
+            <img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt="">
+            <img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt="">
         </div>
-
+        <div></div>
     </section>
 
     <section>
@@ -346,8 +360,7 @@
         </div>
     </section>
 
-    </main>
-    <footer>
+    <section>
         <div>
             <img src="" alt="logo">
             <div>
@@ -368,7 +381,10 @@
             </div>
         </div>
         <img src="" alt="">
-    </footer>
+    </section>
+
+    </main>
+
     <script defer src="script.js"></script>
 </body>
 </html>
