--- a/index.html
+++ b/index.html
@@ -334,16 +334,19 @@
             </div>
         </div>
         <div class="gallery-images">
-            <img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt="">
-            <img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt=""><img src="https://ik.imagekit.io/5takarcoin/garmui/gallery/gallery1.jpg" alt="">
+            <div class="gallery-image-container">
+                <img src="" alt="">
+
+            </div>
+       
         </div>
         <div></div>
     </section>
 
-    <section>
+    <section class="testimonial-section">
         <h2>Testimonials</h2>
-        <div>
-            <div>
+        <div class="testimonial-cards">
+            <div class="testimonial-card">
                 <img src="" alt="">
                 <p>Quite an insightful training; tons of real time examples to co-relate with what we are learning and helps with real time projects. The training has opened doors to countless opportunities.</p>
                 <div>
@@ -360,18 +363,32 @@
         </div>
     </section>
 
-    <section>
-        <div>
-            <img src="" alt="logo">
-            <div>
-                <li></li>
-                <li></li>
-                <li></li>
-            </div>
+    <section class="footer-section">
+        <div class="footer-left-outer">
+            <img src="public/logo.svg" alt="logo">
+            <div class="footer-left">
+                <a href="">
+                    <span>
+                        <img class="loc-mail-call" src="public/mail.svg"></img>
+                    </span>
+                    <span>info_bd@netcomlearning.com</span>
+                </a>
+            <a href="">
+                <span>
+                    <img class="loc-mail-call" src="public/loc.svg"></img>
+                </span>
+                <span>13/B, 3rd Floor, Road # 08, Gulshan-1, Dhaka, Bangladesh</span>
+            </a>
+            <a href="">
+                <span>
+                    <img class="loc-mail-call" src="public/call.svg"></img>
+                </span>
+                <span>09610-993030</span></a>
+        </div>
             <p>&copy; 2023 Fabric Group.</p>
         </div>
-        <div>
-            <div>
+        <div class="footer-middle">
+            <div class="footer-middle-links">
                 <img src="public/fb.svg" alt=""><img src="public/ig.svg" alt=""><img src="public/x.svg" alt=""><img src="public/li.svg" alt="">
             </div>
             <p>With a legacy built on precision, innovation, and ethical craftsmanship, [Your Company Name] is a leading garments manufacturer trusted by global brands across continents. From design to delivery, our vertically integrated operations ensure quality, speed, and sustainability at every stage. With decades of experience, state-of-the-art facilities, and a people-first approach, we don’t just make garments — we build lasting partnerships</p>
@@ -380,7 +397,7 @@
                 <img src="" alt="fabricXai">
             </div>
         </div>
-        <img src="" alt="">
+            <img class="footer-map" src="https://ik.imagekit.io/5takarcoin/garmui/gallery/footer-map.png" alt="">
     </section>
 
     </main>
