--- a/index.html
+++ b/index.html
@@ -346,20 +346,11 @@
     <section class="testimonial-section">
         <h2>Testimonials</h2>
         <div class="testimonial-cards">
-            <div class="testimonial-card">
-                <img src="" alt="">
-                <p>Quite an insightful training; tons of real time examples to co-relate with what we are learning and helps with real time projects. The training has opened doors to countless opportunities.</p>
-                <div>
-                    <span>Murali S..</span>
-                    <img src="" alt="levis">
-                </div>
-            </div>
-            <div></div>
-            <div></div>
+            
         </div>
-        <div>
-            <img src="" alt="arrow-left">
-            <img src="" alt="arrow-right">
+        <div class="testi-arrows">
+            <img class="rot-180" src="public/arrow_circle_right.svg" alt="arrow-left">
+            <img src="public/arrow_circle_right.svg" alt="arrow-right">
         </div>
     </section>
 
@@ -385,16 +376,18 @@
                 </span>
                 <span>09610-993030</span></a>
         </div>
-            <p>&copy; 2023 Fabric Group.</p>
+            <p class="small-text">&copy; 2023 Fabric Group.</p>
         </div>
         <div class="footer-middle">
-            <div class="footer-middle-links">
-                <img src="public/fb.svg" alt=""><img src="public/ig.svg" alt=""><img src="public/x.svg" alt=""><img src="public/li.svg" alt="">
-            </div>
-            <p>With a legacy built on precision, innovation, and ethical craftsmanship, [Your Company Name] is a leading garments manufacturer trusted by global brands across continents. From design to delivery, our vertically integrated operations ensure quality, speed, and sustainability at every stage. With decades of experience, state-of-the-art facilities, and a people-first approach, we don’t just make garments — we build lasting partnerships</p>
             <div>
-                <p>powered by</p>
-                <img src="" alt="fabricXai">
+                <div class="footer-middle-links">
+                <img src="public/fb.svg" alt=""><img src="public/ig.svg" alt=""><img src="public/x.svg" alt=""><img src="public/li.svg" alt="">
+            </div><p class="small-text footer-para">With a legacy built on precision, innovation, and ethical craftsmanship, [Your Company Name] is a leading garments manufacturer trusted by global brands across continents. From design to delivery, our vertically integrated operations ensure quality, speed, and sustainability at every stage. With decades of experience, state-of-the-art facilities, and a people-first approach, we don’t just make garments — we build lasting partnerships</p>
+            </div>
+            
+            <div>
+                <p class="small-text padding-bot-small">powered by</p>
+                <img src="public/powered.svg" alt="fabricXai">
             </div>
         </div>
             <img class="footer-map" src="https://ik.imagekit.io/5takarcoin/garmui/gallery/footer-map.png" alt="">
